# SpeechPilot

./: .gitignore  AGENT.md  LICENSE  README.md  build.gradle.kts  gradle.properties  pyrightconfig.json  settings.gradle.kts
.github/: copilot-instructions.md
.github/workflows/: README.md  backend-build.yml  backend-cd.yml  backend-ci.yml  backend-infra-pulumi.yml  backend-quality.yml  release.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/kotlin/com/speechpilot/: MainActivity.kt  SpeechPilotApp.kt
app/src/main/kotlin/com/speechpilot/service/: SpeechCoachingService.kt
audio/src/main/kotlin/com/speechpilot/audio/: AudioCapture.kt  AudioFrame.kt  MicrophoneCapture.kt
audio/src/test/kotlin/com/speechpilot/audio/: FileAudioCaptureTest.kt
data/: build.gradle.kts
data/src/main/kotlin/com/speechpilot/data/: RoomSessionRepository.kt  SessionDao.kt  SessionRecord.kt  SpeechPilotDatabase.kt
data/src/test/kotlin/com/speechpilot/data/: SessionRecordTest.kt
docs/: phase1_architecture.md  plan.md
feedback/: build.gradle.kts
feedback/src/main/kotlin/com/speechpilot/feedback/: FeedbackDispatcher.kt  FeedbackEvent.kt  FeedbackMode.kt  ThresholdFeedbackDecision.kt  VibrationFeedbackDispatcher.kt
feedback/src/test/kotlin/com/speechpilot/feedback/: ThresholdFeedbackDecisionEngineTest.kt  ThresholdFeedbackDecisionTest.kt
gradle/: libs.versions.toml
infra/docker/: .env.example  README.md  docker-compose.yml
infra/pulumi/: Pulumi.yaml  README.md  __main__.py  requirements.txt
k8s/base/: deployment.yaml  kustomization.yaml  service.yaml  serviceaccount.yaml
k8s/overlays/development/: deployment-patch.yaml  kustomization.yaml  namespace.yaml
k8s/overlays/production/: deployment-patch.yaml  kustomization.yaml  namespace.yaml
k8s/overlays/staging/: deployment-patch.yaml  kustomization.yaml  namespace.yaml
modelmanager/: build.gradle.kts
modelmanager/src/main/kotlin/com/speechpilot/modelmanager/: DefaultLocalModelManager.kt  KnownModels.kt  LocalModelDescriptor.kt  ModelType.kt  WorkManagerLocalModelManager.kt
modelmanager/src/test/kotlin/com/speechpilot/modelmanager/: DefaultLocalModelManagerTest.kt  WorkManagerLocalModelManagerTest.kt
pace/: build.gradle.kts
pace/src/main/kotlin/com/speechpilot/pace/: PaceMetrics.kt  RollingPaceWindow.kt  RollingWindowPaceEstimator.kt
pace/src/test/kotlin/com/speechpilot/pace/: AudioPaceValidationTest.kt  RollingPaceWindowTest.kt  RollingWindowPaceEstimatorTest.kt
samples/: AUD-20260330-WA0002.aac  Slow.m4a
scripts/: resolve-deploy-env.sh
segmentation/src/main/kotlin/com/speechpilot/segmentation/: SpeechSegmenter.kt  VadSpeechSegmenter.kt
session/: build.gradle.kts
settings/: build.gradle.kts
src/: ARCHITECTURE.md
src/android/app/: proguard-rules.pro
src/android/audio/: build.gradle.kts
src/android/data/: build.gradle.kts
src/android/gradle/: libs.versions.toml
src/android/segmentation/: build.gradle.kts
src/android/session/: build.gradle.kts
src/android/transcription/: build.gradle.kts
src/android/transcription/src/main/cpp/: CMakeLists.txt
src/android/ui/: build.gradle.kts
src/backend/: Dockerfile  README.md  alembic.ini  pyproject.toml  pyrightconfig.json
src/backend/alembic/: env.py  script.py.mako
src/backend/alembic/versions/: 20260406_0001_initial_vertical_slice.py  20260406_0002_realtime_metrics_and_segments.py  20260406_0003_feedback_history.py
src/backend/app/: __init__.py  main.py
src/backend/app/api/: __init__.py  health.py  replay.py  router.py  sessions.py
src/backend/app/config/: __init__.py  settings.py
src/backend/app/domain/: __init__.py  feedback.py  session.py  session_metrics.py  transcript.py
src/backend/app/observability/: __init__.py  log_config.py
src/backend/app/persistence/: __init__.py  db.py  models.py  repository.py
src/backend/app/persistence/realtime_store/: __init__.py  base.py  factory.py  managed.py  redis_store.py
src/backend/app/providers/: __init__.py  container.py  stt.py
src/backend/app/services/: __init__.py  analytics.py  coaching.py  session_service.py
src/backend/app/services/coaching/: __init__.py  service.py
src/backend/app/services/pace/: __init__.py  service.py
src/backend/app/websocket/: __init__.py  gateway.py  manager.py  routes.py
src/backend/tests/: conftest.py  test_coaching_service.py  test_health.py  test_pace_service.py  test_session_service.py  test_sessions_api.py  test_stt_provider.py  test_websocket.py
src/contracts/: README.md
src/contracts/python/: pyproject.toml
src/contracts/python/speechpilot_contracts/: __init__.py  events.py
src/contracts/schemas/: realtime-events.v1.schema.json
src/contracts/typescript/: index.d.ts  index.js  index.ts  package.json
src/web/: Dockerfile  README.md  next.config.ts  package.json  tsconfig.tsbuildinfo
src/web/src/app/: globals.css  layout.tsx  page.tsx
src/web/src/app/history/: page.tsx
src/web/src/app/history/[sessionId]/: page.tsx
src/web/src/app/live/: page.tsx
src/web/src/app/replay/: page.tsx
src/web/src/app/settings/: page.tsx
src/web/src/components/: history-overview-page.tsx  landing-page.tsx  live-session-page.tsx  replay-page.tsx  session-debug-shell.tsx  session-detail-page.tsx  session-history-shell.tsx  settings-page.tsx
src/web/src/features/replay/: replay-mode.ts  use-replay-transcription.ts
src/web/src/hooks/: use-app-preferences.ts  use-session-detail.ts  use-session-history.ts  use-websocket-session.ts
src/web/src/lib/: audio-capture.ts  contracts.ts  env.ts  format.ts  session-history.ts
transcription/: build.gradle.kts
transcription/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
ui/: build.gradle.kts
vad/: build.gradle.kts
(+117 files in other folders)
