[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "speechpilot-contracts"
version = "0.1.0"
description = "Shared SpeechPilot v2 event contracts for Python."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.9,<3"
]

[tool.setuptools.packages.find]
include = ["speechpilot_contracts*"]